# Dwarf-Therapist

./: .gitignore  .hgignore  .travis.yml  BUILDING.experimental  BUILDING.md  BUILDING.rst  BUILDING.txt  CHANGELOG.txt  CMakeLists.txt  Doxyfile  DwarfTherapist.pri  DwarfTherapist.rc  KNOWN_ISSUES.txt  LICENSE.txt  Makefile  Makefile_Linux  README.md  README.rst  README.txt  ReleaseChecklist.txt  Toolchain-mingw32.cmake  build_packages  default_gridviews.dtg  dwarftherapist.pri  dwarftherapist.pro  dwarftherapist.sln  dwarftherapist.vcproj  dwarftherapist_en.ts  export-dt-ini.lua  hammer.icns  images.qrc  make-dt.pl  make-srctar  resource.h  resources.qrc  windeployqt.sh  ziumoz2r.5nf.txt
.github/workflows/: build.yml
.travis/: deploy.sh
.travis/linux/: deploy.sh  install_deps.sh
.travis/osx/: deploy.sh  install_deps.sh
.travis/windows/: build_plugin.bat  deploy.sh  install_deps.sh
GeneratedFiles/: qrc_images.cpp
cmake/Modules/: UseLATEX.cmake
debian/: README.Debian  changelog  control  dwarf-therapist.install  install  menu  postinst  prerm  rules
debian/patches/: install.patch
debian/source/: options
doc/: CMakeLists.txt  Dwarf Therapist.tex  communicating.html  dwarftherapist.qhcp  dwarftherapist.qhp  feature_list.html  index.html
etc/: default_gridviews_MW.dtg  game_data.ini  game_data_MW.ini  game_data_vanilla.ini  v0.28.181.40d.ini  v0.28.181.40d11.ini  v0.28.181.40d12.ini  v0.28.181.40d13.ini  v0.28.181.40d14.ini  v0.28.181.40d8.ini  v0.28.181.40d9.ini
etc/sets/: DM1.ini  DM10.ini  DM11.ini  DM2.ini  DM3.ini  DM4.ini  DM5.ini  DM6.ini  DM7s.ini  DM8.ini  DM9.ini  Happiness.ini  Social.ini  VP_Landscape.ini  VP_Metal.ini  VP_Organic.ini  VP_Other.ini  VP_Stone.ini  VP_TasksIndoor.ini  VP_TasksOutdoor.ini  VP_mil_defense.ini  VP_mil_offense.ini  VP_skill_other.ini  VP_social.ini  generic_engineering.ini  generic_hauling.ini  generic_mil_nonstandard.ini  generic_military.ini  generic_social.ini  generic_useless.ini  mining_set.ini  wood_set.ini
etc/views/: DM_defaultview.ini  Military.ini  Social.ini  VPview.ini  _VPview.ini  _VPview.ini.bak  default.ini  generic_mil_view.ini  labors.ini
experiments/graphicstherapist/: basegraphicsobject.cpp  basegraphicsobject.h  creature.cpp  creature.h  displaycell.cpp  displaycell.h  graphicstherapist.pro  graphicsthing.cpp  graphicsthing.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
google_app/: app.yaml  index.yaml  main.py  metricentry.py  metrichandler.py  utils.py  versionhandler.py
img/: dwarftherapist.xpm
inc/: GameDataReader.h  aboutdialog.h  activity.h  activityevent.h  attribute.h  attributelevel.h  belief.h  bodypart.h  bodypartdamage.h  bodypartlayer.h  caste.h  contextmenuhelper.h  cp437codec.h  creaturevectorsearchjob.h  currentyearsearchjob.h  customcolor.h  customprofession.h  customprofessionsexportdialog.h  defaultfonts.h  defines.h  dfinstance.h  dfinstancelinux.h  dfinstancenix.h  dfinstanceosx.h  dfinstancewindows.h  dtstandarditem.h  dwarf.h  dwarfdetailswidget.h  dwarfjob.h  dwarfraceindexsearchjob.h  dwarfstats.h  dwarftherapist.h  ecdf.h  emotion.h  emotiongroup.h  equipwarn.h  eventfilterlineedit.h  flagarray.h  fortressentity.h  gamedatareader.h  (+90 more)
inc/docks/: basedock.h  basetreedock.h  dwarfdetailsdock.h  equipmentoverviewdock.h  gridviewdock.h  healthlegenddock.h  helpdock.h  informationdock.h  preferencesdock.h  skilllegenddock.h  thoughtsdock.h  unitsummarydock.h  viewcolumnsetdock.h
inc/graphics/: displaycell.h
inc/grid_view/: attributecolumn.h  beliefcolumn.h  cellcolordef.h  cellcolors.h  columntypes.h  currentjobcolumn.h  customprofessioncolumn.h  equipmentcolumn.h  flagcolumn.h  gridview.h  happinesscolumn.h  healthcolumn.h  highestmoodcolumn.h  idlecolumn.h  itemtypecolumn.h  laborcolumn.h  militarypreferencecolumn.h  professioncolumn.h  rolecolumn.h  skillcolumn.h  spacercolumn.h  superlaborcolumn.h  trainedcolumn.h  traitcolumn.h  viewcolumn.h  viewcolumncolors.h  viewcolumnset.h  viewcolumnsetcolors.h  vieweditordialog.h  weaponcolumn.h
inc/models/: dwarfmodel.h  dwarfmodelproxy.h
inc/raws/: rawnode.h  rawobject.h  rawobjectlist.h  rawreader.h
lnp/: manifest.json  manifest.json.in
osx/: makedist.sh  template.dmg
resources/: default_gridviews.dtg  game_data.ini
scripts/: build_lucid  build_maverick  build_package  build_packages  checkinstall.sh  export-dt-ini.lua  make-dt.pl  make-srctar  windeployqt.sh
share/: README.md  README.rst  README.txt  default_gridviews.dtg  game_data.ini  game_data_MW.ini
share/memory_layouts/: README.rst
src/: GameDataReader.cpp  about.ui  aboutdialog.cpp  aboutdialog.h  activity.cpp  activityevent.cpp  activityevent.h  adaptivecolorfactory.cpp  adaptivecolorfactory.h  attribute.cpp  attribute.h  attributecolumn.cpp  attributecolumn.h  basedock.h  basetreedock.cpp  basetreedock.h  basetreewidget.cpp  basetreewidget.h  belief.cpp  belief.h  beliefcolumn.cpp  beliefcolumn.h  bodypart.h  bodypartdamage.h  bodypartlayer.h  caste.cpp  caste.h  cellcolors.cpp  cellcolors.h  colorbutton.cpp  colorbutton.h  columntypes.h  contextmenuhelper.cpp  contextmenuhelper.h  cp437codec.h  currentjobcolumn.cpp  customcolor.cpp  customcolor.h  customprofession.cpp  customprofession.h  (+309 more)
src/docks/: basedock.cpp  basedock.h  basetreedock.cpp  basetreedock.h  dwarfdetailsdock.cpp  equipmentoverviewdock.cpp  gridviewdock.cpp  gridviewdock.h  healthlegenddock.cpp  healthlegenddock.h  helpdock.cpp  informationdock.cpp  preferencesdock.cpp  preferencesdock.h  skilllegenddock.cpp  thoughtsdock.cpp  thoughtsdock.h  (+2 more)
ui/: about.ui  columneditdialog.ui  customprofession.ui  customprofessionsexportdialog.ui  dwarfdetailsdock.ui  dwarfdetailswidget.ui  gridviewdialog.ui  gridviewdock.ui  importexportdialog.ui  mainwindow.ui  notification.ui  optimizereditor.ui  optionsmenu.ui  pendingchanges.ui  roledialog.cpp  roledialog.ui  scannerdialog.ui  scriptdialog.ui  selectparentlayoutdialog.ui  superlabor.ui  ui_about.h  ui_customprofession.h  ui_mainwindow.h  ui_optionsmenu.h  ui_pendingchanges.h  viewcolumnsetdialog.ui  viewcolumnsetdock.ui  vieweditor.ui
(+560 files in other folders)
